# aaOS

./: .dockerignore  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.bootstrap  LICENSE  README.md  SECURITY.md  docker-compose.bootstrap.yaml  docker-compose.yml  run-aaos.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
crates/aaos-backend-linux/: Cargo.toml
crates/aaos-backend-linux/src/: broker_protocol.rs  broker_session.rs  landlock_compile.rs  lib.rs  seccomp_compile.rs  worker.rs  worker_tools.rs
crates/aaos-backend-linux/tests/: namespaced_backend.rs
crates/aaos-core/: Cargo.toml
crates/aaos-core/src/: agent_id.rs  audit.rs  backend.rs  budget.rs  capability.rs  capability_registry.rs  error.rs  lib.rs  manifest.rs  services.rs  skill.rs  task_ttl.rs  tool_definition.rs  tool_surface.rs
crates/aaos-ipc/: Cargo.toml
crates/aaos-ipc/src/: lib.rs  message.rs  router.rs  validator.rs
crates/aaos-llm/: Cargo.toml
crates/aaos-llm/src/: anthropic.rs  client.rs  error.rs  executor.rs  lib.rs  openai_compat.rs  scheduled.rs  types.rs
crates/aaos-mcp/: Cargo.toml
crates/aaos-mcp/src/: config.rs  lib.rs  types.rs
crates/aaos-mcp/src/client/: mod.rs  proxy.rs  session.rs  transport.rs
crates/aaos-mcp/src/server/: handlers.rs  mod.rs  sse.rs
crates/aaos-mcp/tests/: server_integration.rs
crates/aaos-mcp/tests/fixtures/echo-mcp-server/: Cargo.toml
crates/aaos-mcp/tests/fixtures/echo-mcp-server/src/: main.rs
crates/aaos-memory/: Cargo.toml
crates/aaos-memory/src/: embedding.rs  in_memory.rs  lib.rs  sqlite.rs  store.rs  types.rs
crates/aaos-runtime/: Cargo.toml
crates/aaos-runtime/src/: backend_in_process.rs  capability_registry.rs  context.rs  handoff.rs  lib.rs  persistent.rs  process.rs  registry.rs  scheduler.rs  services.rs  session.rs  supervisor.rs
crates/aaos-runtime/src/plan/: escalation.rs  executor.rs  mod.rs  placeholders.rs  planner.rs  role.rs
crates/aaos-runtime/src/scheduler/: latency.rs  mod.rs  per_model_latency.rs  reasoning_tests.rs  view.rs
crates/aaos-runtime/tests/: live_context_test.rs
crates/aaos-tools/: Cargo.toml
crates/aaos-tools/src/: cargo_run.rs  context.rs  file_edit.rs  file_list.rs  file_read.rs  file_read_many.rs  file_write.rs  git_commit.rs  grep.rs  invocation.rs  lib.rs  memory_delete_tool.rs  memory_query_tool.rs  memory_store_tool.rs  path_safe.rs  registry.rs  routing.rs  skill_read.rs  tool.rs  web_fetch.rs
crates/agentd/: Cargo.toml
crates/agentd/src/: api.rs  approval.rs  approval_store.rs  broadcast_audit.rs  config.rs  lib.rs  main.rs  mcp_backend.rs  orchestration.rs  orchestration_classifier.rs  server.rs  spawn_agents_tool.rs  spawn_tool.rs  workspace_gc.rs
crates/agentd/src/cli/: client.rs  configure.rs  errors.rs  list.rs  logs.rs  mod.rs  output.rs  prefix.rs  roles.rs  status.rs  stop.rs  submit.rs
crates/agentd/tests/: e2e_phase_ab.rs  e2e_phase_abc1.rs  e2e_phase_c2.rs  memory_integration.rs  persistent_integration.rs  smoke_persistent.rs
docs/: agentd-cli-design.md  api.md  architecture.md  distribution-architecture.md  docker.md  ideas.md  patterns.md  phase-b-design.md  phase-b-plan.md  phase-c1-design.md  phase-c2-design.md  phase-c3-design.md  phase-f-b1-design.md  phase-f-b1-plan.md  phase-f-b1-qa-plan.md  phase-f-b2-design.md  phase-f-b2-plan.md  phase-f-b3-design.md  phase-f-b3-plan.md  product-brief.md  reflection-log.md  retrospective.md  roadmap.md  tools.md
docs/reflection/: 2026-04-13-interlude-skill-loading-bug.md  2026-04-13-run-1-security-self-audit.md  2026-04-13-run-2-capability-revocation.md  2026-04-13-run-3-constraint-enforcement.md  2026-04-14-run-10-persistent-memory.md  2026-04-14-run-11-prep-docs-masking-parallelism.md  2026-04-14-run-4-meta-cognitive-coordinator.md  2026-04-14-run-5-first-persistent-memory.md  2026-04-14-run-6-kernel-gated-handoff.md  2026-04-14-run-7-followup-error-handling.md  2026-04-14-run-7-followup-phase1-speed.md  2026-04-14-run-7-kernel-fixes-validated.md  2026-04-14-run-8-phase1-measured.md  2026-04-14-run-9-adversarial-bug-hunt.md  2026-04-15-namespaced-backend-and-droplet-prep.md  2026-04-15-phase-f-a-deb-package.md  2026-04-16-agentd-cli-shipped.md  2026-04-16-computed-orchestration-shipped.md  2026-04-17-aaos-edits-aaos.md  2026-04-17-first-self-build-attempt.md  2026-04-17-git-commit-tool.md  2026-04-17-grep-cleanup.md  2026-04-17-hardening-pass.md  2026-04-17-junior-senior-grep-tool.md  2026-04-17-namespaced-re-verification.md  2026-04-17-replan-on-subtask-failure.md  2026-04-17-role-budget-wiring.md  2026-04-17-secret-isolation.md  2026-04-17-self-build-tool-gap.md  2026-04-17-tool-repeat-guard.md  2026-04-18-broker-worker-stream.md  2026-04-18-f-b1-bugfix-reverify.md  2026-04-18-f-b1-e2e-qa.md  2026-04-18-mcp-integration.md  2026-04-19-f-b2-e2e-qa.md  2026-04-19-f-b3-e2e-qa.md  2026-04-19-f-b3b-gap-fix.md  2026-04-19-f-b3c-workspace-mount.md  2026-04-19-v0.0.1-droplet-qa.md  2026-04-19-v0.0.2-droplet-qa.md  (+15 more)
examples/: hello_agent.yaml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: broker_request_deserialize.rs  glob_matches_canonical.rs  safe_open_for_capability.rs
manifests/: bootstrap.yaml
output/: audit_with_revocation.rs  budget.rs  capability_fixed.rs  capability_with_revocation.rs  design.md  hardening-plan.md  lobsters.txt  manifest_patch.md  phase-e-plan.md  phase-e-review.md  phase-e-spec.md  registry_with_revocation.rs  security-audit.md  self-reflection.md  services_patch.md  summary.txt  vulnerabilities.md  what-i-built.md
output/run-5-artifacts/: README.md  adaptation-algorithm.md  bootstrap-upgrade-guide.md  current-state-analysis.md  design-analysis.md  evolution-plan.md  implementation-approach.md  implementation-plan.md  memory-dump.json  pattern-storage.js  (+3 more)
packaging/: .gitignore  agentd.1.md  agentd.service  build-deb.sh  build-man-page.sh  mcp-servers.yaml  mcp-servers.yaml.example
plans/: 2026-04-15-handle-based-capability-tokens.md
scripts/: S2D.md  s2d-review.sh  setup-hooks.sh
tools/: dashboard.py  detail-log.py
(+32 files in other folders)
