[package]
name = "aaos-backend-linux"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
description = "Linux-namespaced AgentBackend for aaOS (user namespaces + Landlock + seccomp)"

[lib]
name = "aaos_backend_linux"
path = "src/lib.rs"

[[bin]]
name = "aaos-agent-worker"
path = "src/bin/aaos-agent-worker.rs"

[dependencies]
aaos-core = { workspace = true }
aaos-tools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["sched", "process", "signal", "fs", "mount", "user", "socket"] }
landlock = "0.4"
seccompiler = "0.5"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
