[package]
name = "aaos-core"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
description = "Core types for the aaOS agent-first operating system"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tempfile = "3"
futures = "0.3"
tokio = { workspace = true }
