[package]
name = "aaos-ipc"
version = "0.0.4"
edition = "2021"
license = "Apache-2.0"
description = "MCP-based IPC system for aaOS"

[dependencies]
aaos-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
