[package]
name = "aaos-llm"
version = "0.1.5"
edition = "2021"
license = "Apache-2.0"
description = "LLM integration layer for aaOS — client, executor, and types"

[dependencies]
aaos-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
