[package]
name = "aaos-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
aaos-core    = { workspace = true }
aaos-tools   = { workspace = true }
aaos-runtime = { workspace = true }
async-trait  = { workspace = true }
tokio        = { workspace = true }
tokio-util   = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
serde_yaml   = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
reqwest      = { workspace = true }
axum         = { workspace = true }
uuid         = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
