[package]
name = "aaos-runtime"
version = "0.1.6"
edition = "2021"
license = "Apache-2.0"
description = "Agent process runtime for aaOS"

[dependencies]
aaos-core = { workspace = true }
aaos-ipc = { workspace = true }
aaos-tools = { workspace = true }
aaos-llm = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = "0.3"

[dev-dependencies]
tempfile = "3"
