[package]
name = "aaos-tools"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
description = "Tool registry and service layer for aaOS"

[dependencies]
aaos-core = { workspace = true }
aaos-ipc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
aaos-memory = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
