[package]
name = "aaos-tools"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Tool registry and service layer for aaOS"

[dependencies]
aaos-core = { workspace = true }
aaos-ipc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
aaos-memory = { workspace = true }
sha2 = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["fs"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
