[package]
name = "agentd"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
description = "aaOS agent daemon — manages agent lifecycles"

[lib]
name = "agentd"
path = "src/lib.rs"

[[bin]]
name = "agentd"
path = "src/main.rs"

[dependencies]
aaos-core = { workspace = true }
aaos-llm = { workspace = true }
aaos-runtime = { workspace = true }
aaos-ipc = { workspace = true }
aaos-tools = { workspace = true }
aaos-memory = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
scopeguard = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
aaos-mcp = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
aaos-backend-linux = { workspace = true, optional = true }
libc = "0.2"

[features]
default = []
# Enable the Linux-namespaced AgentBackend. When set, and when
# AAOS_DEFAULT_BACKEND=namespaced is exported at runtime, agentd will
# launch persistent agents through NamespacedBackend instead of
# InProcessBackend. Default remains InProcessBackend.
namespaced-agents = ["dep:aaos-backend-linux"]
mcp = ["dep:aaos-mcp"]

# ----------------------------------------------------------------------------
# Debian packaging metadata (consumed by `cargo deb`).
# Produces `target/debian/aaos_<version>_<arch>.deb`.
# ----------------------------------------------------------------------------
[package.metadata.deb]
name = "aaos"
maintainer = "Jounes <jounes.ds@gmail.com>"
copyright = "2026, Jounes <jounes.ds@gmail.com>"
license-file = ["../../LICENSE", "0"]
extended-description = """
aaOS is a capability-enforced agent runtime. agentd manages agent lifecycles,
enforces capability tokens at tool-invocation boundaries, and routes IPC between
agents. This package installs the daemon plus the default bootstrap manifest.
"""
depends = "$auto, systemd, ca-certificates, ripgrep"
section = "admin"
priority = "optional"
assets = [
  ["../../target/release/agentd", "usr/bin/", "755"],
  ["../../target/release/aaos-agent-worker", "usr/bin/", "755"],
  ["../../manifests/bootstrap.yaml", "etc/aaos/manifests/", "644"],
  ["../../packaging/agentd.service", "lib/systemd/system/", "644"],
  ["../../README.md", "usr/share/doc/aaos/", "644"],
  ["../../packaging/agentd.1.gz", "usr/share/man/man1/", "644"],
  ["../../packaging/roles/fetcher.yaml", "etc/aaos/roles/", "644"],
  ["../../packaging/roles/writer.yaml", "etc/aaos/roles/", "644"],
  ["../../packaging/roles/analyzer.yaml", "etc/aaos/roles/", "644"],
  ["../../packaging/roles/generalist.yaml", "etc/aaos/roles/", "644"],
]
conf-files = [
  "/etc/aaos/manifests/bootstrap.yaml",
  "/etc/aaos/roles/fetcher.yaml",
  "/etc/aaos/roles/writer.yaml",
  "/etc/aaos/roles/analyzer.yaml",
  "/etc/aaos/roles/generalist.yaml",
]
maintainer-scripts = "../../packaging/debian/"
systemd-units = { unit-name = "agentd", enable = true, start = true }

