[package]
name = "agentd"
version = "0.0.2"
edition = "2021"
license = "Apache-2.0"
description = "Agent-first runtime daemon — manages agent lifecycles (aaOS)"

[lib]
name = "agentd"
path = "src/lib.rs"

[[bin]]
name = "agentd"
path = "src/main.rs"

[dependencies]
aaos-core = { workspace = true }
aaos-llm = { workspace = true }
aaos-runtime = { workspace = true }
aaos-ipc = { workspace = true }
aaos-tools = { workspace = true }
aaos-memory = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
scopeguard = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
aaos-mcp = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
aaos-backend-linux = { workspace = true, optional = true }
libc = "0.2"

[features]
default = []
# Enable the Linux-namespaced AgentBackend. When set, and when
# AAOS_DEFAULT_BACKEND=namespaced is exported at runtime, agentd will
# launch persistent agents through NamespacedBackend instead of
# InProcessBackend. Default remains InProcessBackend.
namespaced-agents = ["dep:aaos-backend-linux"]
mcp = ["dep:aaos-mcp"]

# ----------------------------------------------------------------------------
# Debian packaging metadata (consumed by `cargo deb`).
# Produces `target/debian/aaos_<version>_<arch>.deb`.
# ----------------------------------------------------------------------------
[package.metadata.deb]
name = "aaos"
maintainer = "Jounes <jounes.ds@gmail.com>"
copyright = "2026, Jounes <jounes.ds@gmail.com>"
extended-description = """
Agent-first runtime where AI agents are native processes.  Manages agent
lifecycles, enforces capability tokens at tool-invocation boundaries, and
routes IPC between agents.  This package installs the daemon plus the
default bootstrap manifest.
"""
depends = "$auto, systemd, ca-certificates, ripgrep"
section = "admin"
priority = "optional"
# Binary stripping happens in packaging/build-deb.sh via `cargo deb --strip`.
# Setting it here via cargo-deb's Cargo.toml fields doesn't work reliably.
# cargo-deb (tested through v3.6.3) does not expose a pre-build hook in the
# [package.metadata.deb] table. The `aaos-agent-worker` binary is shipped as
# an asset below but `cargo deb -p agentd` alone does not build it. Use the
# one-step wrapper `packaging/build-deb.sh` which builds both binaries and
# then packs. See the BUG #1 note in packaging/build-deb.sh for context.
assets = [
  ["../../target/release/agentd", "usr/bin/", "755"],
  ["../../target/release/aaos-agent-worker", "usr/bin/", "755"],
  ["../../manifests/bootstrap.yaml", "etc/aaos/manifests/", "644"],
  ["../../packaging/agentd.service", "usr/lib/systemd/system/", "644"],
  ["../../README.md", "usr/share/doc/aaos/", "644"],
  ["../../packaging/agentd.1.gz", "usr/share/man/man1/", "644"],
  ["../../packaging/roles/fetcher.yaml", "etc/aaos/roles/", "644"],
  ["../../packaging/roles/writer.yaml", "etc/aaos/roles/", "644"],
  ["../../packaging/roles/analyzer.yaml", "etc/aaos/roles/", "644"],
  ["../../packaging/roles/generalist.yaml", "etc/aaos/roles/", "644"],
  # MCP configuration template. Shipped as .example (never as the live
  # mcp-servers.yaml) so the daemon's MCP subsystems stay off-by-default
  # on install; an operator copies-and-uncomments to opt in.
  ["../../packaging/mcp-servers.yaml.example", "etc/aaos/", "644"],
  # AgentSkills catalog — 21 skills from addyosmani/agent-skills. Shipped
  # under /usr/share/aaos/skills/ so agents declaring skill-using
  # capabilities find a populated catalog on first boot. Glob recurses
  # into each skill's sub-tree (SKILL.md + reference files).
  ["../../.agents/skills/**/*", "usr/share/aaos/skills/", "644"],
  # Debian-Policy-12.5-compliant copyright file. References
  # /usr/share/common-licenses/Apache-2.0 instead of inlining the full
  # license text. Overrides cargo-deb's auto-generated copyright.
  ["../../packaging/debian/copyright", "usr/share/doc/aaos/copyright", "644"],
  # Non-native-package changelog per Debian Policy 12.7.  The .gz is
  # produced by packaging/build-deb.sh (cargo-deb has no auto-gzip).
  ["../../packaging/debian/changelog.Debian.gz", "usr/share/doc/aaos/changelog.Debian.gz", "644"],
  # Lintian overrides for warnings lintian raises that are either
  # upstream-lintian bugs (sha256sums), intentional design choices
  # (static libyaml, skills with 644), or operational realities
  # (systemctl from maintainer scripts when systemd-units is also set).
  ["../../packaging/debian/lintian-overrides", "usr/share/lintian/overrides/aaos", "644"],
]
conf-files = [
  "/etc/aaos/manifests/bootstrap.yaml",
  "/etc/aaos/roles/fetcher.yaml",
  "/etc/aaos/roles/writer.yaml",
  "/etc/aaos/roles/analyzer.yaml",
  "/etc/aaos/roles/generalist.yaml",
]
maintainer-scripts = "../../packaging/debian/"
systemd-units = { unit-name = "agentd", enable = true, start = true }

